Messages and channels are stored in repo when created;

--- a/SlackClone.Web/SlackClone.Web.csproj
+++ b/SlackClone.Web/SlackClone.Web.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SlackClone.Contract\SlackClone.Contract.csproj" />
+    <ProjectReference Include="..\SlackClone.Core\SlackClone.Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
