--- a/SlackClone.Core.Tests.Unit/SlackClone.Core.Tests.Unit.csproj
+++ b/SlackClone.Core.Tests.Unit/SlackClone.Core.Tests.Unit.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SlackClone.Contract\SlackClone.Contract.csproj" />
     <ProjectReference Include="..\SlackClone.Core\SlackClone.Core.csproj" />
   </ItemGroup>
 
