--- a/SlackClone.Web/appsettings.json
+++ b/SlackClone.Web/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JWT_SECRET_KEY": "thirty-two-character-long-string"
 }
